# vcfexpress

./: Cargo.toml  LICENSE  README.md  speed.html
.github/workflows/: docs.yml  rust.yml
scripts/: csq.lua  csq_header.lua  h.lua  high_impact_header.lua  pre.lua  t.sh
src/: fast_eval_filter.rs  genotypes.rs  header.rs  lib.rs  lua_filter.rs  main.rs  pprint.rs  records_iterator.rs  variant.rs  variant_record.rs  vcfexpr.rs  vcfexpress.rs
