[package]
name = "vcfexpr"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.9.7", features = ["luau", "send", "parking_lot"] }
rust-htslib = { version = "0.46.0", features = ["libdeflate", "static"] }
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
parking_lot = { version = "0.12.1", features = ["arc_lock"] }
#libc = "0.2.153"

[[bin]]
name = "vcfexpr"
src = "src/main.rs"

[lib]
name = "vcfexpr"
src = "src/lib.rs"


[profile.release]
lto = "fat"
codegen-units = 1
